# mill

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  deny.toml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  error.rs  main.rs
crates/cli/src/client/: mod.rs  sse.rs
crates/cli/src/commands/: cluster.rs  deploy.rs  logs.rs  mod.rs  nodes.rs  secrets.rs  status.rs  tasks.rs  volumes.rs
crates/cli/src/output/: json.rs  mod.rs  table.rs
crates/cli/tests/binary/: main.rs  offline.rs  online.rs
crates/cli/tests/binary/harness/: mod.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  support.rs
crates/config/src/types/: api.rs  bytesize_serde.rs  config.rs  data_dir.rs  env.rs  interface.rs  mod.rs  resolved.rs  runtime.rs
crates/config/src/validate/: constraints.rs  mod.rs  parse.rs  refs.rs
crates/config/tests/: parse.rs
crates/containerd/: Cargo.toml
crates/containerd/src/: cgroups.rs  container.rs  error.rs  image.rs  lib.rs  logs.rs  runtime.rs  spec.rs  stats.rs
crates/containerd/tests/: integration.rs
crates/net/: Cargo.toml
crates/net/src/: error.rs  lib.rs  ports.rs
crates/net/src/dns/: forward.rs  handler.rs  mod.rs
crates/net/src/wireguard/: cmd.rs  mod.rs
crates/node/: Cargo.toml
crates/node/src/: env.rs  error.rs  lib.rs  util.rs
crates/node/src/daemon/: client.rs  identity.rs  mod.rs  support.rs  tests.rs
crates/node/src/primary/: dns.rs  logs.rs  mod.rs  nodes.rs  proxy.rs  report.rs  scheduler.rs  tasks.rs  watchdog.rs
crates/node/src/primary/api/: auth.rs  handlers.rs  leader.rs  mod.rs  sse.rs
crates/node/src/primary/deploy/: diff.rs  mod.rs  validate.rs
crates/node/src/primary/health/: mod.rs
crates/node/src/rpc/: codec.rs  mod.rs  protocol.rs  router.rs  server.rs
crates/node/src/secondary/: heartbeat.rs  logs.rs  metrics.rs  mod.rs  reconcile.rs  runner.rs  state.rs
crates/node/src/storage/: digitalocean.rs  mod.rs
crates/node/tests/integration/: cluster.rs  deploy.rs  failover.rs  main.rs  partition.rs  scheduling.rs  volumes.rs
crates/node/tests/integration/harness/: mod.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: error.rs  lib.rs
crates/proxy/src/acme/: challenges.rs  client.rs  mod.rs  renewal.rs
crates/proxy/src/certs/: cache.rs  file_store.rs  mod.rs
crates/proxy/src/proxy/: forward.rs  http.rs  https.rs  metrics.rs  mod.rs  routes.rs  websocket.rs
crates/proxy/src/tls/: mod.rs  resolver.rs  selfsigned.rs
crates/raft/: Cargo.toml
crates/raft/src/: config.rs  error.rs  lib.rs  log_store.rs
crates/raft/src/fsm/: apply.rs  command.rs  mod.rs  state.rs
crates/raft/src/network/: http.rs  mod.rs
crates/raft/src/secrets/: cipher.rs  mod.rs
crates/raft/src/snapshot/: codec.rs  disk.rs  mod.rs
crates/raft/tests/: cluster.rs  fsm.rs  secrets.rs  snapshot.rs
crates/raft/tests/common/: mod.rs
crates/support/: Cargo.toml
crates/support/src/: client.rs  cluster.rs  lib.rs  mesh.rs  runtime.rs  secondary.rs  volume.rs
deploy/pulumi/: README.md
deploy/pulumi/digitalocean/: Pulumi.yaml  index.ts  package.json  tsconfig.json
deploy/scripts/: install.sh
deploy/terraform/: README.md
deploy/terraform/digitalocean/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: api.md  arch.md  cli.md  config.md  overview.md
docs/epics/: 5a-quickstart-local-dev.md
docs/workflows/: 01-cluster-formation.md  02-first-deploy.md  03-rolling-update.md  04-deploy-rollback.md  05-node-failure.md  06-drain-and-remove.md  07-task-lifecycle.md  08-secret-injection.md  09-volume-affinity.md  10-leader-failover.md  11-snapshot-stale-watchers.md  12-partial-deploy-failure.md  13-alloc-leak.md
examples/: backend.mill  frontend.mill  hello.mill
harness/: compare-specs.sh  debug-deploy.sh  inspect-spec.sh  mill-harness  mill.yaml  netns-setup.sh  netns-teardown.sh
tests/smoke/: Cargo.toml
tests/smoke/src/: lib.rs
tests/smoke/tests/: alloc_leak.rs  cluster_formation.rs  deploy_rollback.rs  drain_and_remove.rs  first_deploy.rs  leader_failover.rs  node_failure.rs  partial_deploy_failure.rs  rolling_update.rs  secret_injection.rs  snapshot_stale_watchers.rs  task_lifecycle.rs  volume_affinity.rs
