[workspace]
resolver = "2"
members = [
    "crates/config",
    "crates/raft",
    "crates/containerd",
    "crates/net",
    "crates/proxy",
    "crates/node",
    "crates/support",
    "crates/cli",
    "tests/smoke",
]

[workspace.dependencies]
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
bytesize = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
humantime = "2"
serde_json = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tempfile = "3"
yare = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
strip = true
lto = true
panic = "abort"
