[package]
name = "mill"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mill-config = { path = "../config" }
mill-node = { path = "../node" }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
comfy-table = "7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytesize = { workspace = true }

[dev-dependencies]
mill-support = { path = "../support" }
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
