[package]
name = "mill-containerd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mill-config = { path = "../config" }
base64 = { workspace = true }
sha2 = "0.10"
serde = { workspace = true }
containerd-client = { version = "0.6", features = ["connect"] }
oci-spec = "0.8"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nix = { version = "0.29", features = ["fs"] }
serde_json = { workspace = true }
bytesize = { workspace = true }

[lints]
workspace = true
