[package]
name = "mill-raft"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mill-config = { path = "../config" }

axum = { workspace = true }
bytesize = { workspace = true }
chacha20poly1305 = "0.10"
zeroize = "1"
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
parking_lot = { workspace = true }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rmp-serde = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zstd = "0.13"

[dev-dependencies]
mill-config = { path = "../config", features = ["support"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
yare = { workspace = true }

[lints]
workspace = true
