[package]
name = "mill-support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mill-config = { path = "../config", features = ["support"] }
mill-containerd = { path = "../containerd" }
mill-net = { path = "../net" }
mill-raft = { path = "../raft" }
mill-node = { path = "../node" }
openraft = "0.9"
bytesize = { workspace = true }
parking_lot = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
